Added to template. Applied template to pages.

--- a/website/companions/index.html
+++ b/website/companions/index.html
@@ -3,12 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>The Doctor Who Website</title>
+<title>The Companions</title>
 <!-- InstanceEndEditable -->
 	<!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 	<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
-	<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
+	<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 </head>
 
 <body>
@@ -20,7 +20,16 @@
     <td colspan="2">[Banner]</td>
   </tr>
   <tr>
-    <td height="146"></td>
+    <td height="146">
+    <table>
+    	<tr>
+    		<td>Rose Tyler</td>
+    		</tr>
+    	<tr>
+    		<td>Amy Pond</td>
+    		</tr>
+    	</table>
+    </td>
     <td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
   </tr>
 </table>
