--- a/website/villains/index.html
+++ b/website/villains/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<!-- InstanceBeginEditable name="doctitle" -->
-<title>The Doctor Who Website</title>
+<title>Untitled Document</title>
 <!-- InstanceEndEditable -->
 	<!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
