--- a/website/companions/index.html
+++ b/website/companions/index.html
@@ -20,18 +20,59 @@
     <td colspan="2">[Banner]</td>
   </tr>
   <tr>
-    <td height="146">
+    <td height="673">
     <table>
     	<tr>
-    		<td>Rose Tyler</td>
+    		<td width="92">Rose Tyler</td>
+    		</tr>
+    	<tr>
+    		<td>Martha Jones</td>
+    		</tr>
+    	<tr>
+    		<td>Jack Harkness</td>
+    		</tr>
+    	<tr>
+    		<td>Lady Christina de Souza</td>
+    		</tr>
+    	<tr>
+    		<td>Rory Williams</td>
     		</tr>
     	<tr>
     		<td>Amy Pond</td>
     		</tr>
+    	<tr>
+    		<td height="21">Clara Oswald</td>
+    		</tr>
+    	<tr>
+    		<td height="21">River Song</td>
+    		</tr>
     	</table>
+    <!-- InstanceBeginEditable name="If Villians Secondary Menu" --><!-- InstanceEndEditable -->
+    <table width="114">
+    	<tr>
+    		<td>Daleks</td>
+    		</tr>
+    	<tr>
+    		<td>Cybermen</td>
+    		</tr>
+    	<tr>
+    		<td>The Master</td>
+    		</tr>
+    	<tr>
+    		<td>Lady Cassandra</td>
+    		</tr>
+    	<tr>
+    		<td>Davros</td>
+    		</tr>
+    	<tr>
+    		<td>Weeping Angels</td>
+    		</tr>
+    	</table>
+    <p>&nbsp;</p>
     </td>
     <td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
   </tr>
 </table>
+
 </body>
 <!-- InstanceEnd --></html>
