Content Each Page
Content The Doctors
Content Companions
Content Villians

--- a/website/companions/index.html
+++ b/website/companions/index.html
@@ -1,78 +1,77 @@
 <!doctype html>
 <html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-	<meta charset="UTF-8">
-	<!-- InstanceBeginEditable name="doctitle" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
 <title>The Companions</title>
 <!-- InstanceEndEditable -->
-	<!-- InstanceBeginEditable name="head" -->
+		<!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-	<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
-	<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
-</head>
-
-<body>
-<table>
-  <tr>
-    <td colspan="2">[Primary Navigation]</td>
-  </tr>
-  <tr>
-    <td colspan="2">[Banner]</td>
-  </tr>
-  <tr>
-    <td height="673">
-    <table>
-    	<tr>
-    		<td width="92">Rose Tyler</td>
-    		</tr>
-    	<tr>
-    		<td>Martha Jones</td>
-    		</tr>
-    	<tr>
-    		<td>Jack Harkness</td>
-    		</tr>
-    	<tr>
-    		<td>Lady Christina de Souza</td>
-    		</tr>
-    	<tr>
-    		<td>Rory Williams</td>
-    		</tr>
-    	<tr>
-    		<td>Amy Pond</td>
-    		</tr>
-    	<tr>
-    		<td height="21">Clara Oswald</td>
-    		</tr>
-    	<tr>
-    		<td height="21">River Song</td>
-    		</tr>
-    	</table>
-    <!-- InstanceBeginEditable name="If Villians Secondary Menu" --><!-- InstanceEndEditable -->
-    <table width="114">
-    	<tr>
-    		<td>Daleks</td>
-    		</tr>
-    	<tr>
-    		<td>Cybermen</td>
-    		</tr>
-    	<tr>
-    		<td>The Master</td>
-    		</tr>
-    	<tr>
-    		<td>Lady Cassandra</td>
-    		</tr>
-    	<tr>
-    		<td>Davros</td>
-    		</tr>
-    	<tr>
-    		<td>Weeping Angels</td>
-    		</tr>
-    	</table>
-    <p>&nbsp;</p>
-    </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
-  </tr>
-</table>
-
-</body>
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table>
+						<tr>
+							<td width="92"><a href="rose-tyler.html">Rose Tyler</a></td>
+						</tr>
+						<tr>
+							<td><a href="martha-jones.html">Martha Jones</a></td>
+						</tr>
+						<tr>
+							<td><a href="jack-harkness.html">Jack Harkness</a></td>
+						</tr>
+						<tr>
+							<td><a href="lady-christina-de-souza.html">Lady Christina de Souza</a></td>
+						</tr>
+						<tr>
+							<td><a href="rory-williams.html">Rory Williams</a></td>
+						</tr>
+						<tr>
+							<td><a href="amy-pond.html">Amy Pond</a></td>
+						</tr>
+						<tr>
+							<td height="21"><a href="clara-oswald.html">Clara Oswald</a></td>
+						</tr>
+						<tr>
+							<td height="21"><a href="river-song.html">River Song</a></td>
+						</tr>
+					</table>
+					
+					<table width="152">
+						<tr>
+							<td><a href="../villains/daleks.html">Daleks</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/cybermen.html">Cybermen</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/the-master.html">The Master</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/lady-cassandra.html">Lady Cassandra</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/davros.html">Davros</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/weeping-angels.html">Weeping Angels</a></td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
 <!-- InstanceEnd --></html>
