--- a/website/the-doctors/index.html
+++ b/website/the-doctors/index.html
@@ -1,70 +1,91 @@
 <!doctype html>
 <html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-	<meta charset="UTF-8">
-	<!-- InstanceBeginEditable name="doctitle" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
 <title>The Doctors</title>
 <!-- InstanceEndEditable -->
-	<!-- InstanceBeginEditable name="head" -->
+		<!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-	<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
-	<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
-</head>
-
-<body>
-<table>
-  <tr>
-    <td colspan="2">[Primary Navigation]</td>
-  </tr>
-  <tr>
-    <td colspan="2">[Banner]</td>
-  </tr>
-  <tr>
-    <td height="673">
-    	<table>
-    		<tr>
-    			<td width="71">The First Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>The Second Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Third Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Fourth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Fifth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Sixth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Seventh Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Eighth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Ninth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Tenth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Eleventh Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>
-    				<p>Twelfth Doctor</p>
-    			</td>
-    			</tr>
-    		</table>
-    </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
-  </tr>
-</table>
-
-</body>
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table>
+						<tr>
+							<td width="51"><a href="the-first-doctor.html">The First Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-second-doctor.html">The Second Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-third-doctor.html">The Third Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fourth-doctor.html">The Fourth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fifth-doctor.html">The Fifth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-sixth-doctor.html">The Sixth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-seventh-doctor.html">The Seventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eighth-doctor.html">The Eighth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-ninth-doctor.html">The Ninth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-tenth-doctor.html">The Tenth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eleventh-doctor.html">The Eleventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td>
+								<p><a href="the-twelfth-doctor.html">The Twelfth Doctor</a></p>
+							</td>
+						</tr>
+					</table>
+					
+					<table width="152">
+						<tr>
+							<td><a href="../villains/daleks.html">Daleks</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/cybermen.html">Cybermen</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/the-master.html">The Master</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/lady-cassandra.html">Lady Cassandra</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/davros.html">Davros</a></td>
+						</tr>
+						<tr>
+							<td><a href="../villains/weeping-angels.html">Weeping Angels</a></td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
 <!-- InstanceEnd --></html>
