--- a/website/the-doctors/the-tenth-doctor.html
+++ b/website/the-doctors/the-tenth-doctor.html
@@ -1,10 +1,60 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
-
-<body>
-</body>
-</html>
+<!doctype html>
+<html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
+	<title>The Doctor Who Website</title>
+	<!-- InstanceEndEditable -->
+		<!-- InstanceBeginEditable name="head" -->
+	<!-- InstanceEndEditable -->
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table>
+						<tr>
+							<td width="92"><a href="../companions/rose-tyler.html">Rose Tyler</a></td>
+						</tr>
+						<tr>
+							<td><a href="../companions/martha-jones.html">Martha Jones</a></td>
+						</tr>
+						<tr>
+							<td><a href="../companions/jack-harkness.html">Jack Harkness</a></td>
+						</tr>
+						<tr>
+							<td><a href="../companions/lady-christina-de-souza.html">Lady Christina de Souza</a></td>
+						</tr>
+						<tr>
+							<td><a href="../companions/rory-williams.html">Rory Williams</a></td>
+						</tr>
+						<tr>
+							<td><a href="../companions/amy-pond.html">Amy Pond</a></td>
+						</tr>
+						<tr>
+							<td height="21"><a href="../companions/clara-oswald.html">Clara Oswald</a></td>
+						</tr>
+						<tr>
+							<td height="21"><a href="../companions/river-song.html">River Song</a></td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+					<p>The <strong>Tenth Doctor</strong> is the tenth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series<em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He is played by <a href="http://en.wikipedia.org/wiki/David_Tennant" title="David Tennant">David Tennant</a>, who appears in three series as well as eight specials.</p>
+					<p>In the series' narrative, <a href="http://en.wikipedia.org/wiki/The_Doctor_(Doctor_Who)" title="The Doctor (Doctor Who)">the Doctor</a> is a centuries-old <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> alien from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a> who <a href="http://en.wikipedia.org/wiki/Time_travel_in_fiction" title="Time travel in fiction">travels in time</a> in his<a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with <a href="http://en.wikipedia.org/wiki/Companion_(Doctor_Who)" title="Companion (Doctor Who)">companions</a>. When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body; in doing so, his physical appearance and personality change.</p>
+					<p>ennant portrays the tenth such incarnation. This incarnation's companions have included working class shop assistant <a href="http://en.wikipedia.org/wiki/Rose_Tyler" title="Rose Tyler">Rose Tyler</a> (<a href="http://en.wikipedia.org/wiki/Billie_Piper" title="Billie Piper">Billie Piper</a>), medical student <a href="http://en.wikipedia.org/wiki/Martha_Jones" title="Martha Jones">Martha Jones</a> (<a href="http://en.wikipedia.org/wiki/Freema_Agyeman" title="Freema Agyeman">Freema Agyeman</a>) and fiery <a href="http://en.wikipedia.org/wiki/Temporary_work" title="Temporary work">temp worker</a> <a href="http://en.wikipedia.org/wiki/Donna_Noble" title="Donna Noble">Donna Noble</a> (<a href="http://en.wikipedia.org/wiki/Catherine_Tate" title="Catherine Tate">Catherine Tate</a>); he eventually parts ways with them all by the end of the 2008 series finale, "<a href="http://en.wikipedia.org/wiki/Journey%27s_End_(Doctor_Who)" title="Journey's End (Doctor Who)">Journey's End</a>", after which he attempted to travel alone for the duration of the <a href="http://en.wikipedia.org/wiki/Doctor_Who_(2008-10_specials)" title="Doctor Who (2008-10 specials)">2008–10 specials</a>.</p>
+				<!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
+<!-- InstanceEnd --></html>
