--- a/website/companions/river-song.html
+++ b/website/companions/river-song.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
-
-<body>
-</body>
-</html>
+<!doctype html>
+<html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
+	<title>The Doctor Who Website</title>
+	<!-- InstanceEndEditable -->
+		<!-- InstanceBeginEditable name="head" -->
+	<!-- InstanceEndEditable -->
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table>
+						<tr>
+							<td width="92"><a href="rose-tyler.html">Rose Tyler</a></td>
+						</tr>
+						<tr>
+							<td><a href="martha-jones.html">Martha Jones</a></td>
+						</tr>
+						<tr>
+							<td><a href="jack-harkness.html">Jack Harkness</a></td>
+						</tr>
+						<tr>
+							<td><a href="lady-christina-de-souza.html">Lady Christina de Souza</a></td>
+						</tr>
+						<tr>
+							<td><a href="rory-williams.html">Rory Williams</a></td>
+						</tr>
+						<tr>
+							<td><a href="amy-pond.html">Amy Pond</a></td>
+						</tr>
+						<tr>
+							<td height="21"><a href="clara-oswald.html">Clara Oswald</a></td>
+						</tr>
+						<tr>
+							<td height="21"><a href="river-song.html">River Song</a></td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
+<!-- InstanceEnd --></html>
