--- a/website/index.html
+++ b/website/index.html
@@ -1,29 +1,50 @@
 <!doctype html>
 <html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-	<meta charset="UTF-8">
-	<!-- InstanceBeginEditable name="doctitle" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
 <title>The Doctor Who Website</title>
 <!-- InstanceEndEditable -->
-	<!-- InstanceBeginEditable name="head" -->
+		<!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-	<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
-	<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
-</head>
-
-<body>
-<table>
-  <tr>
-    <td colspan="2">[Primary Navigation]</td>
-  </tr>
-  <tr>
-    <td colspan="2">[Banner]</td>
-  </tr>
-  <tr>
-    <td height="673"></td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
-  </tr>
-</table>
-
-</body>
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table width="152">
+						<tr>
+							<td><a href="villains/daleks.html">Daleks</a></td>
+						</tr>
+						<tr>
+							<td><a href="villains/cybermen.html">Cybermen</a></td>
+						</tr>
+						<tr>
+							<td><a href="villains/the-master.html">The Master</a></td>
+						</tr>
+						<tr>
+							<td><a href="villains/lady-cassandra.html">Lady Cassandra</a></td>
+						</tr>
+						<tr>
+							<td><a href="villains/davros.html">Davros</a></td>
+						</tr>
+						<tr>
+							<td><a href="villains/weeping-angels.html">Weeping Angels</a></td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
 <!-- InstanceEnd --></html>
