--- a/website/the-doctors/the-eighth-doctor.html
+++ b/website/the-doctors/the-eighth-doctor.html
@@ -1,10 +1,74 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
-
-<body>
-</body>
-</html>
+<!doctype html>
+<html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
+	<title>The Doctor Who Website</title>
+	<!-- InstanceEndEditable -->
+		<!-- InstanceBeginEditable name="head" -->
+	<!-- InstanceEndEditable -->
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table>
+						<tr>
+							<td width="51"><a href="the-first-doctor.html">The First Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-second-doctor.html">The Second Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-third-doctor.html">The Third Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fourth-doctor.html">The Fourth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fifth-doctor.html">The Fifth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-sixth-doctor.html">The Sixth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-seventh-doctor.html">The Seventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eighth-doctor.html">The Eighth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-ninth-doctor.html">The Ninth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-tenth-doctor.html">The Tenth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eleventh-doctor.html">The Eleventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td>
+								<p><a href="the-twelfth-doctor.html">The Twelfth Doctor</a></p>
+							</td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+					<p>The <strong>Eighth Doctor</strong> is the eighth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series<em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He was portrayed by <a href="http://en.wikipedia.org/wiki/Paul_McGann" title="Paul McGann">Paul McGann</a>. Though he only appeared on television in one <a href="http://en.wikipedia.org/wiki/Doctor_Who_(1996_film)" title="Doctor Who (1996 film)">TV film</a>, his adventures are extensively portrayed in <a href="http://en.wikipedia.org/wiki/Doctor_Who_spin-offs" title="Doctor Who spin-offs">other media</a>.</p>
+					<p>Within the series' narrative, the Doctor is a centuries-old alien, a <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a>, who <a href="http://en.wikipedia.org/wiki/Time_travel_in_fiction" title="Time travel in fiction">travels in time and space</a> in his <a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with <a href="http://en.wikipedia.org/wiki/Companion_(Doctor_Who)" title="Companion (Doctor Who)">companions</a>.</p>
+					<p>When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body but in doing so gains a new physical appearance and with it, a distinct new personality. McGann portrays the eighth such incarnation, a passionate, enthusiastic, and eccentric character. His only companion in the television movie is <a href="http://en.wikipedia.org/wiki/Grace_Holloway" title="Grace Holloway">Grace Holloway</a> (<a href="http://en.wikipedia.org/wiki/Daphne_Ashbrook" title="Daphne Ashbrook">Daphne Ashbrook</a>), a medical doctor whose surgery is responsible for triggering his regeneration.</p>
+				<!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
+<!-- InstanceEnd --></html>
