--- a/website/the-doctors/the-first-doctor.html
+++ b/website/the-doctors/the-first-doctor.html
@@ -1,70 +1,74 @@
 <!doctype html>
 <html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
-<head>
-	<meta charset="UTF-8">
-	<!-- InstanceBeginEditable name="doctitle" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
 <title>The Doctors</title>
 <!-- InstanceEndEditable -->
-	<!-- InstanceBeginEditable name="head" -->
+		<!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
-	<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
-	<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
-</head>
-
-<body>
-<table>
-  <tr>
-    <td colspan="2">[Primary Navigation]</td>
-  </tr>
-  <tr>
-    <td colspan="2">[Banner]</td>
-  </tr>
-  <tr>
-    <td height="673">
-    	<table>
-    		<tr>
-    			<td width="71">The First Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>The Second Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Third Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Fourth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Fifth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Sixth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Seventh Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Eighth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Ninth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Tenth Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>Eleventh Doctor</td>
-    			</tr>
-    		<tr>
-    			<td>
-    				<p>Twelfth Doctor</p>
-    			</td>
-    			</tr>
-    		</table>
-    </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
-  </tr>
-</table>
-
-</body>
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table>
+						<tr>
+							<td width="51"><a href="the-first-doctor.html">The First Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-second-doctor.html">The Second Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-third-doctor.html">The Third Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fourth-doctor.html">The Fourth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fifth-doctor.html">The Fifth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-sixth-doctor.html">The Sixth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-seventh-doctor.html">The Seventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eighth-doctor.html">The Eighth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-ninth-doctor.html">The Ninth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-tenth-doctor.html">The Tenth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eleventh-doctor.html">The Eleventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td>
+								<p><a href="the-twelfth-doctor.html">The Twelfth Doctor</a></p>
+							</td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+    	<p>The <strong>First Doctor</strong> is the initial <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He was portrayed by the actor <a href="http://en.wikipedia.org/wiki/William_Hartnell" title="William Hartnell">William Hartnell</a> from 1963 to 1966.</p>
+    	<p>Within the series' narrative, the Doctor is a centuries-old alien <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a> who <a href="http://en.wikipedia.org/wiki/Time_travel_in_fiction" title="Time travel in fiction">travels in time</a> and space in his <a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with <a href="http://en.wikipedia.org/wiki/Companion_(Doctor_Who)" title="Companion (Doctor Who)">companions</a>. When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body; in doing so, his physical appearance and personality change.</p>
+    	<p>The First Doctor is the youngest incarnation of the Doctor, but has the most aged physical appearance, having grown old through a natural lifespan. </p>
+    <!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
 <!-- InstanceEnd --></html>
