--- a/website/the-doctors/the-ninth-doctor.html
+++ b/website/the-doctors/the-ninth-doctor.html
@@ -1,10 +1,75 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
-
-<body>
-</body>
-</html>
+<!doctype html>
+<html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
+	<title>The Doctor Who Website</title>
+	<!-- InstanceEndEditable -->
+		<!-- InstanceBeginEditable name="head" -->
+	<!-- InstanceEndEditable -->
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table>
+						<tr>
+							<td width="51"><a href="the-first-doctor.html">The First Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-second-doctor.html">The Second Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-third-doctor.html">The Third Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fourth-doctor.html">The Fourth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fifth-doctor.html">The Fifth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-sixth-doctor.html">The Sixth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-seventh-doctor.html">The Seventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eighth-doctor.html">The Eighth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-ninth-doctor.html">The Ninth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-tenth-doctor.html">The Tenth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eleventh-doctor.html">The Eleventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td>
+								<p><a href="the-twelfth-doctor.html">The Twelfth Doctor</a></p>
+							</td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+					<p>The <strong>Ninth Doctor</strong> is the ninth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. </p>
+					<p>He is portrayed by <a href="http://en.wikipedia.org/wiki/Christopher_Eccleston" title="Christopher Eccleston">Christopher Eccleston</a> during the <a href="http://en.wikipedia.org/wiki/Doctor_Who_(series_1)" title="Doctor Who (series 1)">first series</a> of the show's revival in 2005. Within the series' narrative, the Doctor is a <a href="http://en.wikipedia.org/wiki/Time_travel" title="Time travel">time travelling</a>, <a href="http://en.wikipedia.org/wiki/Humanoid" title="Humanoid">humanoid</a> <a href="http://en.wikipedia.org/wiki/Extraterrestrial_life" title="Extraterrestrial life">alien</a> from a race known as the <a href="http://en.wikipedia.org/wiki/Time_Lords" title="Time Lords">Time Lords</a>. When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
+					<p>he production team's approach to the character and Eccleston's portrayal were highlighted as being intentionally different from his predecessors, with Eccleston stating that his character would be less eccentric. To fit in with a 21st-century audience, the Doctor was given a primary companion who was designed to be as independent and courageous as himself in the form of <a href="http://en.wikipedia.org/wiki/Rose_Tyler" title="Rose Tyler">Rose Tyler</a>. He also briefly travels with <a href="http://en.wikipedia.org/wiki/Adam_Mitchell_(Doctor_Who)" title="Adam Mitchell (Doctor Who)">Adam Mitchell</a>, a self-serving boy genius who acts as a foil to the companions and ultimately proves unworthy, and <a href="http://en.wikipedia.org/wiki/Jack_Harkness" title="Jack Harkness">Jack Harkness</a>, a reformed con-man from the 51st Century.<br>
+					</p>
+				<!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
+<!-- InstanceEnd --></html>
