--- a/website/the-doctors/the-sixth-doctor.html
+++ b/website/the-doctors/the-sixth-doctor.html
@@ -1,10 +1,74 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
-
-<body>
-</body>
-</html>
+<!doctype html>
+<html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
+	<title>The Doctor Who Website</title>
+	<!-- InstanceEndEditable -->
+		<!-- InstanceBeginEditable name="head" -->
+	<!-- InstanceEndEditable -->
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table>
+						<tr>
+							<td width="51"><a href="the-first-doctor.html">The First Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-second-doctor.html">The Second Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-third-doctor.html">The Third Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fourth-doctor.html">The Fourth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-fifth-doctor.html">The Fifth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-sixth-doctor.html">The Sixth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-seventh-doctor.html">The Seventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eighth-doctor.html">The Eighth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-ninth-doctor.html">The Ninth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-tenth-doctor.html">The Tenth Doctor</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-eleventh-doctor.html">The Eleventh Doctor</a></td>
+						</tr>
+						<tr>
+							<td>
+								<p><a href="the-twelfth-doctor.html">The Twelfth Doctor</a></p>
+							</td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+    	<p>The <strong>Sixth Doctor</strong> is the sixth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He was portrayed by <a href="http://en.wikipedia.org/wiki/Colin_Baker" title="Colin Baker">Colin Baker</a>.</p>
+    	<p>The Sixth Doctor appeared in three seasons. His appearance in the first of these was at the end of the final episode of <em><a href="http://en.wikipedia.org/wiki/The_Caves_of_Androzani" title="The Caves of Androzani">The Caves of Androzani</a></em> which featured the regeneration from the <a href="http://en.wikipedia.org/wiki/Fifth_Doctor" title="Fifth Doctor">Fifth Doctor</a> and thereafter in the following serial <em><a href="http://en.wikipedia.org/wiki/The_Twin_Dilemma" title="The Twin Dilemma">The Twin Dilemma</a></em>, the end of that season.</p>
+    	<p>Within the series' narrative, the Doctor is a centuries-old <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> alien from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a> who travels in time and space in his<a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. </p>
+    <!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
+<!-- InstanceEnd --></html>
