--- a/website/villains/weeping-angels.html
+++ b/website/villains/weeping-angels.html
@@ -1,10 +1,50 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
-</head>
-
-<body>
-</body>
-</html>
+<!doctype html>
+<html><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+	<head>
+		<meta charset="UTF-8">
+		<!-- InstanceBeginEditable name="doctitle" -->
+	<title>The Doctor Who Website</title>
+	<!-- InstanceEndEditable -->
+		<!-- InstanceBeginEditable name="head" -->
+	<!-- InstanceEndEditable -->
+		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
+	</head>
+	
+	<body>
+		<table>
+			<tr>
+				<td colspan="2">[Primary Navigation]</td>
+			</tr>
+			<tr>
+				<td colspan="2">[Banner]</td>
+			</tr>
+			<tr>
+				<td height="673">
+					<table width="152">
+						<tr>
+							<td><a href="daleks.html">Daleks</a></td>
+						</tr>
+						<tr>
+							<td><a href="cybermen.html">Cybermen</a></td>
+						</tr>
+						<tr>
+							<td><a href="the-master.html">The Master</a></td>
+						</tr>
+						<tr>
+							<td><a href="lady-cassandra.html">Lady Cassandra</a></td>
+						</tr>
+						<tr>
+							<td><a href="davros.html">Davros</a></td>
+						</tr>
+						<tr>
+							<td><a href="weeping-angels.html">Weeping Angels</a></td>
+						</tr>
+					</table>
+					 </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+			</tr>
+		</table>
+	</body>
+<!-- InstanceEnd --></html>
